[ash-md] Fixes the vertical offset for search in overview with ChromeVox

BUG=631908

Review-Url: https://codereview.chromium.org/2208513002
Cr-Commit-Position: refs/heads/master@{#409423}

Former-commit-id: da81a26c1a9726d08b01db32a9f33b9d007d6cac